--- a/package.json
+++ b/package.json
@@ -51,4 +51,8 @@
     "@babel/parser": "^7.25.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
+  ,"engines": {
+  "node": ">=16.0.0"
+}
+
 }
